# knowledge-engine

./: .gitignore  CLAUDE.md  README.md  bridge.py  bridge_config.py  monthly-summary-config.json  pyproject.toml  requirements.txt  server.py  ui.html
scripts/: fix-registry-dates.sh  generate-monthly-summary.sh  on-session-end.sh  register-tool.sh  report.sh  save-session.sh  scan-skills-agents.sh  watch-claude-desktop.sh
tests/: test_bridge.py
wiki/demo-retail/: sample-meeting-notes.md  sample-proposal.md  sample-research.md
